
  news:
    - Preliminary support for JustDecompile.

  upgrades:
    - de4Dot/dnlib update. Support for deobfuscating 'Confuser'.
    - Mono.Cecil 0.10 update.
    - Don't close Edit/Create instruction dialog on opc/operand inconsistency.
    - Add editors for all primitive types for constant/custom attributes.
    - Support for ILSpy 3.x

  bugfixes:
    - Fix method matching with Reflector.
    - Fix renaming fields losing constant values.

////////////////////////////////////////////////////////////////////////////////
// v2.1 - 10/08/2016 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - Replace with NOP in the instructions editor.
    - Added copy/paste to instruction editing grid, thanks to Thijs Kroesbergen.
    - Added SilverLight 5 compilation profile.

  upgrades:
    - Use resolver for system assemblies if NoStdLib is set.
    - Add extra registry keys for finding SDK tools (thanks to Sander Cox).

  bugfixes:
    - Fix resource mapping mechanism with ILSpy.
    - Fix version display with ILSpy.
    - Fix API compatibility with ILSpy 2.4 (you will need to use this version).
    - Fix cannot select operator methods when editing call/callvirt opcodes.
    - Fix import with generic parameters.

////////////////////////////////////////////////////////////////////////////////
// v2.0 - 31/09/2015 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - ILSpy support.
    - hot assembly replacement feature for ILSpy 2.3+ and Reflector 8.5+.
    - support for generic instance types and methods in the instruction editor.
    - generic type arguments editor when selecting a type/method with generic
      parameter(s).

  upgrades:
    - improved member matching with code injection.
    - try to resolve an assembly from the host assemblies first, then use the