@@ -77,6 +77,7 @@
     <Compile Include="Compilation\CompilerProfile.cs" />
     <Compile Include="Compilation\CSharpHelper.cs" />
     <Compile Include="Compilation\CSharpKeywords.cs" />
+    <Compile Include="Compilation\NamespaceCollector.cs" />
     <Compile Include="Compilation\SpaceSurrounder.cs" />
     <Compile Include="Compilation\SupportedLanguage.cs" />
     <Compile Include="Compilation\ILanguageHelper.cs" />
